[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "outlandishroughradius"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
twython = "^3.8"
requests = "^2.23"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
